Update phenotype and prioritiser packages to use JDK List.of/List.copyOf