@@ -1,7 +1,7 @@
 /*
  * The Exomiser - A tool to annotate and prioritize genomic variants
  *
- * Copyright (c) 2016-2020 Queen Mary University of London.
+ * Copyright (c) 2016-2021 Queen Mary University of London.
  * Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
@@ -25,7 +25,6 @@
  */
 package org.monarchinitiative.exomiser.core.prioritisers.service;
 
-import com.google.common.collect.ImmutableList;
 import org.monarchinitiative.exomiser.core.phenotype.Organism;
 import org.monarchinitiative.exomiser.core.prioritisers.model.Disease;
 import org.monarchinitiative.exomiser.core.prioritisers.model.GeneDiseaseModel;
@@ -42,7 +41,6 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -101,7 +99,7 @@ public class ModelServiceImpl implements ModelService {
             //HUMAN     2263        FGFR2               OMIM:101600 Apert syndrome  HP:0000174,HP:0000194,HP:0000218,HP:0000238,HP:0000244,HP:0000272,HP:0000303,HP:0000316,HP:0000322,HP:0000324,HP:0000327,HP:0000348,HP:0000431,HP:0000452,HP:0000453,HP:0000470,HP:0000486,HP:0000494,HP:0000508,HP:0000586,HP:0000678,HP:0001156,HP:0001249,HP:0002308,HP:0002676,HP:0002780,HP:0003041,HP:0003070,HP:0003196,HP:0003272,HP:0003307,HP:0003795,HP:0004209,HP:0004322,HP:0004440,HP:0005048,HP:0005280,HP:0005347,HP:0006101,HP:0006110,HP:0009602,HP:0009773,HP:0010055,HP:0010669,HP:0011304
             //HUMAN     2260        FGFR1               OMIM:101600 Another syn...  HP:0000174,HP:0000194,HP:0000218,HP:0000238,HP:0000244,HP:0000272,HP:0000303,HP:0000316,HP:0000322,HP:0000324,HP:0000327,HP:0000348,HP:0000431,HP:0000452,HP:0000453,HP:0000470,HP:0000486,HP:0000494,HP:0000508,HP:0000586,HP:0000678,HP:0001156,HP:0001249,HP:0002308,HP:0002676,HP:0002780,HP:0003041,HP:0003070,HP:0003196,HP:0003272,HP:0003307,HP:0003795,HP:0004209,HP:0004322,HP:0004440,HP:0005048,HP:0005280,HP:0005347,HP:0006101,HP:0006110,HP:0009602,HP:0009773,HP:0010055,HP:0010669,HP:0011304
             while (rs.next()) {
-                List<String> phenotypes = ImmutableList.copyOf(rs.getString("pheno_ids").split(","));
+                List<String> phenotypes = List.of(rs.getString("pheno_ids").split(","));
                 Disease disease = Disease.builder()
                         .diseaseId(rs.getString("disease_id"))
                         .diseaseName(rs.getString("disease_term"))
@@ -120,7 +118,7 @@ public class ModelServiceImpl implements ModelService {
         } catch (SQLException e) {
             logger.error("Problem setting up model query: {}", modelQuery, e);
         }
-        return models;
+        return List.copyOf(models);
     }
         
     private List<GeneModel> runGeneOrthologModelQuery(String modelQuery) {
@@ -147,7 +145,7 @@ public class ModelServiceImpl implements ModelService {
                 String phenotypeIdString = toEmptyIfNull(rs.getString("pheno_ids"));
 
                 String[] mpInitial = phenotypeIdString.split(",");
-                List<String> phenotypeIds = Arrays.asList(mpInitial);
+                List<String> phenotypeIds = List.of(mpInitial);
                 
                 GeneOrthologModel model = new GeneOrthologModel(modelId, organism, entrezId, humanGeneSymbol, modelGeneId, modelGeneSymbol, phenotypeIds);
                 models.add(model);
@@ -155,7 +153,7 @@ public class ModelServiceImpl implements ModelService {
         } catch (SQLException e) {
             logger.error("Problem setting up model query: {}", modelQuery, e);
         }
-        return models;
+        return List.copyOf(models);
     }
 
     private String toEmptyIfNull(String result) {
